# NLP-Gun-Legislation

./: .gitignore  README.md  environment.yml  internship_log.typ  main.ipynb  pyproject.toml  requirements.txt  url-links.csv  web-scraper.ipynb  web-scraper.py
Annotated-Bibliography/: main.tex
Paper/: main.tex  main.typ
Proposal/: main.tex
blogs/: Blog Entry 1.typ  Blog Entry 2.typ  Blog Entry 3.typ  Blog Entry 4.typ  Blog Entry 5.typ  Blog Entry 6.typ  Blog Entry 7.typ  Blog Entry 8.typ  Blog Entry 9.typ  Blog entry 10.typ
contract/: main.tex
data_collection/: URL_links.csv  classification.py  main.py  web_scraper.py
graphs/: control_histogram.csv  details.ipynb  overall.csv  overall2.csv  parties.csv  parties.py  rights_histogram.csv  sentiments.py  variances.ipynb
paper/: main.typ  refs.bib
poster-presentation/: Rubric.md  Work.md  main.md
research-process/: A comprehensive review on resolving ambiguities in natural language processing.md  API tools.md  How to - PHD Research.md  Links - Machine Learning Project.md  Neutral or Framed? A Sentiment Analysis of 2019 Abortion Laws.md  Sentiment Classification of News Text Data Using Intelligent Model.md
research_paper/: main.typ  refs.bib
senior-project-work/: README.md  Syllabus.md  Tips & Guidelines.md  Website Information.md  main.typ  syllabus.typ
senior-research-project/: README.md  Tips.typ  Website Information.md  blogs.typ  main.typ  syllabus.typ
sentiment_analysis/: flair_model.py  initalize.py  initialize.py  main.py  textblob_model.py  vader.py  vader_model.py
src/: URL_links.csv  (+2 more)
(+56 files in other folders)
