[project]
name = "nlp-gun-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ojas Chaturedi", email = "oj.chaturvedi.2024@gmail.com" }
]
dependencies = [
    "python-dotenv>=1.0.1",
    "openai>=1.25.1",
    "tiktoken>=0.6.0",
    "bs4>=0.0.2",
    "selenium>=4.20.0",
    "vadersentiment>=3.3.2",
]
readme = "README.md"
requires-python = ">= 3.8"
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sentiment_analysis"]
